Fix typo in blacklist label

--- a/carciofo-web-blocker/options/options.html
+++ b/carciofo-web-blocker/options/options.html
@@ -11,7 +11,7 @@
             <div>carciofo web blocker</div>
             <div id="list-container">
                 <div>
-                    <label for="strict-blacklist">Blacklist:</label>
+                    <label for="blacklist">Blacklist:</label>
                     <textarea id="blacklist" rows="8" cols="25"></textarea>
                 </div>
                 <div>
