Add options save functionality

--- a/carciofo-web-blocker/options/options.html
+++ b/carciofo-web-blocker/options/options.html
@@ -22,6 +22,9 @@
             <div>
                 <button id="save-button">Save changes</button>
             </div>
+            <div id="save-response"></div>
         </div>
+
+        <script src="options.js"></script>
     </body>
 </html>
