Add animations to options stylings

--- a/carciofo-web-blocker/options/options.html
+++ b/carciofo-web-blocker/options/options.html
@@ -26,7 +26,7 @@
                 </div>
 
                 <div id="button-container">
-                    <div id="save-response"></div>
+                    <div id="save-response">Changes saved</div>
                     <button id="save-button">Save changes</button>
                 </div>
             </div>
